charts/ssd/test/ssd/templates/ingress/ssd-ui-ingress.yaml
---
# Source: ssd/templates/ingress/ssd-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    acme.cert-manager.io/http01-edit-in-place: "true"
    cert-manager.io/issue-temporary-certificate: "true"
    cert-manager.io/issuer: letsencrypt-argo-test-ssd
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/client-header-buffer-size: 100m
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "18000"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "18000"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "18000"
  name: ssd-ui-ingress
spec:
  rules:
  - host: ssd-gitargo.aoa.oes.opsmx.org
    http:
      paths:
      - backend:
          service:
            name: ssd-ui
            port:
              number: 8080
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - ssd-gitargo.aoa.oes.opsmx.org
    secretName: ssd-ui-ingress
